@@ -24,7 +24,7 @@
   
     <div id="content">
       <br />
-      <p align="center" style="text-align:center;">This is <b>CAT12.1 (r1277) from 2018-02-13</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
+      <p align="center" style="text-align:center;">This is <b>CAT12.1 (r1278) from 2018-02-14</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
       <h1 style="text-align:center;"><img src="images/CAT.png" width=40% height=auto alt="CAT" ></h1>
 
       <hr />
